--- a/sections/results.tex
+++ b/sections/results.tex
@@ -1,5 +1,5 @@
 \section{Results}\label{sec:results}
-\mr{This section presents our $\fnl$ constraints from the DESI LRG targets. The analysis is not carried out blindly. However, the cleaning methods are decided only based on the cross power spectrum and mean density contrast statistics.} 
+This section presents our $\fnl$ constraints from the DESI LRG targets. The analysis is not carried out blindly. However, the cleaning methods are decided only based on the cross power spectrum and mean density contrast statistics. \mr{Alex: Might be nice to have a table listing all cleaning methods used—since there are more than just the 3 map combinations in 2.1.2}
 
 \begin{figure*}
     \centering
@@ -9,7 +9,7 @@
 \end{figure*}
 
 \subsection{DESI imaging LRG sample}
-Figure \ref{fig:cl_dr9} shows the measured power spectrum of the DR9 LRG sample before and after applying imaging weights and the best fit theory curves. The solid line and the grey shade represent respectively the mean power spectrum and 1$\sigma$ error, estimated from the $\fnl=0$ lognormal simulations. The differences between various cleaning methods are significant on large scales ($\ell > 20$), but the small scale clustering measurements are consistent. By comparing \textit{linear two maps} to \textit{linear three maps}, we find that the measured clustering power on modes with $6\leq \ell < 10$ are noticeably different between the two methods. We associate the differences to the additional map for psfsize in the r-band, which is included in \textit{linear three maps}. On other scales, the differences between \textit{linear three maps} and \textit{linear eight maps} are negligible, supporting the idea that our feature selection procedure has been effective in identifying the primary maps which cause the large-scale excess clustering signal. Comparing \textit{nonlinear three maps} to \textit{linear three maps}, we find that the measured spectra on $4 \leq \ell < 6$ are very different, probably indicating some nonlinear spurious fluctuations with large scale characteristics due to extinction. Including stellar density in the nonlinear approach (\textit{nonlinear four maps}) further reduces the excess power relative to the mock power spectrum, in particular on modes between $2\leq \ell < 4$. When calibrated on the lognormal simulations, we find that these differences are recovered after accounting for over-correction. Therefore, we associate this subtraction to over fitting.
+Figure \ref{fig:cl_dr9} shows the measured power spectrum of the DR9 LRG sample before and after applying imaging weights and the best fit theory curves. The solid line and the grey shade represent respectively the mean power spectrum and 1$\sigma$ error, estimated from the $\fnl=0$ lognormal simulations. The differences between various cleaning methods are significant on large scales ($\ell > 20$), but the small scale clustering measurements are consistent. By comparing \textit{linear two maps} to \textit{linear three maps}, we find that the measured clustering power on modes with $6\leq \ell < 10$ are noticeably different between the two methods. We associate the differences to the additional map for psfsize in the r-band, which is included in \textit{linear three maps}. On other scales, the differences between \textit{linear three maps} and \textit{linear eight maps} are negligible, supporting the idea that our feature selection procedure has been effective in identifying the primary maps which cause the large-scale excess clustering signal. Comparing \textit{nonlinear three maps} to \textit{linear three maps}, we find that the measured spectra on $4 \leq \ell < 6$ are very different, probably indicating some nonlinear spurious fluctuations with large scale characteristics due to extinction. Including stellar density in the nonlinear approach (\textit{nonlinear four maps}) further reduces the excess power relative to the mock power spectrum, in particular on modes between $2\leq \ell < 4$. However, when calibrated on the lognormal simulations, we find that these differences are reversed after accounting for over-correction. Therefore, we associate the subtraction after $nStar$ to over fitting.
 
 
 \subsubsection{Calibrated constraints}
@@ -18,7 +18,7 @@ Figure \ref{fig:cl_dr9} shows the measured power spectrum of the DR9 LRG sample 
     \raggedleft
     \includegraphics[width=0.424\textwidth]{mcmc_dr9methods1d.pdf}
     \includegraphics[width=0.45\textwidth]{figures/mcmc_dr9methods.pdf} 
-    \caption{The calibrated constrains from the DR9 LRG targets. \textit{Top}: probability distribution for $\fnl$ marginalized over the shotnoise and bias. \textit{Bottom}: $68\%$ and $95\%$ probability distribution contours for the bias and $\fnl$ from the DR9 LRG sample before and after applying nonlinear cleaning methods. The lognormal mocks are used to calibrate these distributions for over correction.}\label{fig:mcmc_dr9}
+    \caption{The calibrated constrains from the DR9 LRG sample. \textit{Top}: probability distribution for $\fnl$ marginalized over the shotnoise and bias. \textit{Bottom}: $68\%$ and $95\%$ probability distribution contours for the bias and $\fnl$ from the DR9 LRG sample before and after applying nonlinear cleaning methods. The lognormal mocks are used to calibrate these distributions for over correction.}\label{fig:mcmc_dr9}
 \end{figure}
 
 \begin{table*}
@@ -41,20 +41,20 @@ DESI                      & Nonlinear Nine Maps& $ 49.69$& $ 41.91$& $ 13.10<\fn
 }
 \end{table*}
 
-All $\fnl$ constraints presented here are calibrated for the effect of over correction using the lognormal simulations. Table \ref{tab:dr9methodcalib} describes the best fit and marginalized mean estimates of $\fnl$ from fitting the power spectrum of the DR9 LRG sample before and after cleaning with the nonlinear approach given various combinations for the imaging systematic maps. Figure \ref{fig:mcmc_dr9} shows the marginalized probability distribution for $\fnl$ in the top panel, and the $68\%$ and $95\%$ probability contours for the linear bias parameter and $\fnl$ in the bottom panel, from our sample before and after applying various corrections for imaging systematics. Overall, we find the maximum likelihood estimates to be consistent among the various cleaning methods. We obtain $36.08 (25.03) < \fnl < 61.44(75.64)$ with $\chi^{2}=34.6$ for \textit{nonlinear three maps} over 34 degrees of freedom. Accounted for over-correction, we obtain $36.88(24.87) < \fnl < 63.31(77.78)$ with $\chi^{2}=35.2$ with the additional stellar density map in the \textit{nonlinear four maps}. With or without $nStar$, the confidence intervals are consistent with each other and more than $3\sigma$ off from zero PNG. Cleaning the sample with \textit{nonlinear nine maps} weakens our constraints to $13.10(-15.96) < \fnl < 69.14(91.84)$ with $\chi^{2}=39.5$. For comparison, we obtain $98.14(83.51) < \fnl < 132.89(151.59)$ at $68\% (95\%)$ confidence with $\chi^{2}=44.4$ for the \textit{no weight} approach. The uncalibrated probability contours are presented in Appendix \ref{sec:dr9uncalib}.
-
+All $\fnl$ constraints presented here are calibrated for the effect of over correction using the lognormal simulations. Table \ref{tab:dr9methodcalib} describes the best fit and marginalized mean estimates of $\fnl$ from fitting the power spectrum of the DR9 LRG sample before and after cleaning with the nonlinear approach given various combinations for the imaging systematic maps. Figure \ref{fig:mcmc_dr9} shows the marginalized probability distribution for $\fnl$ in the top panel, and the $68\%$ and $95\%$ probability contours for the linear bias parameter and $\fnl$ in the bottom panel, from our sample before and after applying various corrections for imaging systematics. Overall, we find the maximum likelihood estimates to be consistent among the various cleaning methods. We obtain $36.08 (25.03) < \fnl < 61.44(75.64)$ with $\chi^{2}=34.6$ for \textit{nonlinear three maps} over 34 degrees of freedom. Accounted for over-correction, we obtain $36.88(24.87) < \fnl < 63.31(77.78)$ with $\chi^{2}=35.2$ with the additional stellar density map in the \textit{nonlinear four maps}. With or without $nStar$, the confidence intervals are consistent with each other and more than $3\sigma$ off from zero PNG. Cleaning the sample with \textit{nonlinear nine maps} weakens our constraints to $13.10(-15.96) < \fnl < 69.14(91.84)$ with $\chi^{2}=39.5$. For comparison, we obtain $98.14(83.51) < \fnl < 132.89(151.59)$ at $68\% (95\%)$ confidence with $\chi^{2}=44.4$ for the \textit{no weight} approach.
 
 \subsubsection{Uncalibrated constraints: robustness tests}
-Now we proceed to perform some robustness tests and assess how sensitive the $\fnl$ constraints are to the assumptions made in the analysis or the quality cuts applied to the data. For each case, we re-train the cleaning methods and derive new sets of imaging weights. Accordingly, for the cases where a new survey mask is applied to the data, we re-calculate the covariance matrices using the new survey mask to account for the changes in the survey window and integral constraint effects. Calibrating the mitigation biases for all of these experiments is beyond the scope of this work and redundant, as we are only interested in the relative shift in the $\fnl$ constraints after changing the assumptions. Therefore, the absolute scaling of the $\fnl$ constraints presented here are biased because of the over correction effect. Table \ref{tab:dr9method} summarizes the uncalibrated $\fnl$ constraints from the DR9 LRG sample. Our tests are as follows:
+\mr{Alex: I may have missed this—but do you ever quote the marginalized fnl constraints without mitigation bias (corresponding to Fig. 12)? I think they should probably be in a table and commented on in the text.
+} Now we proceed to perform some robustness tests and assess how sensitive the $\fnl$ constraints are to the assumptions made in the analysis or the quality cuts applied to the data. For each case, we re-train the cleaning methods and derive new sets of imaging weights. Accordingly, for the cases where a new survey mask is applied to the data, we re-calculate the covariance matrices using the new survey mask to account for the changes in the survey window and integral constraint effects. Calibrating the mitigation biases for all of these experiments is beyond the scope of this work and redundant, as we are only interested in the relative shift in the $\fnl$ constraints after changing the assumptions. Therefore, the absolute scaling of the $\fnl$ constraints presented here are biased because of the over correction effect. Table \ref{tab:dr9method} summarizes the uncalibrated $\fnl$ constraints from the DR9 LRG sample. Our tests are as follows:
 
 \begin{table*}
-    \caption{The uncalibrated best fit and marginalized mean estimates for $\fnl$ from fitting the power spectrum of the DR9 LRG sample before and after correcting for systematics. The number of degrees of freedom is 34 (37 data points - 3 parameters). The lowest mode is $\ell=2$ and the covariance matrix is from the $\fnl=0$ clean mocks (no mitigation) except for the case with '+cov' in which the covariance matrix is from the $\fnl=76.9$ clean mocks (no mitigation).}
+    \caption{The uncalibrated best fit and marginalized mean estimates for $\fnl$ from fitting the power spectrum of the DR9 LRG sample before and after correcting for systematics. The estimates are not calibrated for over correction, and thus are subject to mitigation systematics. The number of degrees of freedom is 34 (37 data points - 3 parameters). The lowest mode is $\ell=2$ and the covariance matrix is from the $\fnl=0$ clean mocks (no mitigation) except for the case with '+cov' in which the covariance matrix is from the $\fnl=76.9$ clean mocks (no mitigation).}
     \label{tab:dr9method}
    \centerline{%     
     \begin{tabular}{llllllll}
     \hline
     \hline
-   &  & 	  & & $\fnl$ &  &  \\
+   &  & 	  & & $\fnl$ + Mitigation Systematics &  &  \\
    \cmidrule(r{.7cm}){3-6}
 Footprint                               & Method & 	Best fit  & Mean & $ 68\%$ CL & $ 95\%$ CL & $\chi^{2}$ \\
     \hline
@@ -92,6 +92,16 @@ DECaLS South (comp. cut)  & Nonlinear Three Maps& $ 29.62$& $ 31.76$& $ 13.00<\f
     \end{tabular}}
 \end{table*}
 
+
+
+\begin{figure}
+    \centering
+    \includegraphics[width=0.45\textwidth]{figures/mcmc_dr9methods1dnoshift.pdf}
+    \caption{Same as Figure \ref{fig:mcmc_dr9} but without accouting for over correction. }
+    \label{fig:mcmcdr9noshift}
+\end{figure}
+
+
 \begin{figure}
     \centering
     \includegraphics[width=0.45\textwidth]{figures/mcmc_dr9regions.pdf} 
@@ -101,16 +111,16 @@ DECaLS South (comp. cut)  & Nonlinear Three Maps& $ 29.62$& $ 31.76$& $ 13.00<\f
     \centering
     \includegraphics[width=0.85\textwidth]{figures/cldr9_lowell.pdf}
     \includegraphics[width=0.86\textwidth]{figures/fnl_elmin.pdf}  
-    \caption{Top: The measured power spectra before and after \textit{nonlinear three maps}. The uncalibrated $\fnl$ constraints vs the lowest $\ell$ mode from the DR9 LRG sample cleaned with \textit{nonlinear three maps}. The points represent marginalized mean estimates of $\fnl$ and error bars represent $68$\% confidence.}\label{fig:mcmc_dr9elmin}
+    \caption{Top: The measured power spectra before (small circles) and after \textit{nonlinear three maps} (big circles). Bottom: The uncalibrated $\fnl$ constraints vs the lowest $\ell$ mode from the DR9 LRG sample cleaned with \textit{nonlinear three maps} for the DESI, BASS+MzLS, DECaLS North, and DECaLS South footprints. The points represent marginalized mean estimates of $\fnl$ and error bars represent $68$\% confidence. The $\fnl$ values are subject to over correction.}\label{fig:mcmc_dr9elmin}
 \end{figure*}
 
 \begin{itemize}[itemindent=*]
 
 \item \textbf{Linear methods}: We find consistent constraints from \textit{linear eight maps} and \textit{linear three maps} which suggests that not all imaging systematic maps are needed to completely mitigate systematic effects. We find $\sigma (\fnl) \sim 25$ for the linear methods. With the same set of imaging systematic maps, the nonlinear method yields a smaller constraint, $\Delta \fnl = -8$, and a better $\chi^{2}$ fit, e.g., $34.6$ vs $39.6$ for 34 degrees of freedom, even though the covariance matrix is fixed.
 
-\item \textbf{Imaging regions}: We compare how our constraints from fitting the power spectrum of the whole DESI footprint compares to that from the power spectrum of each imaging region individually, namely BASS+MzLS, DECaLS North, and DECaLS South. Figure~\ref{fig:mcmc_dr9reg} shows the $68\%$ and $95\%$ probability contours on $\fnl$ and $b$ from each individual region, compared with that from DESI. The cleaning method here is \textit{nonlinear three maps}, and the covariance matrices are estimated from the $\fnl=0$ mocks. Overall, we find that the constraints from all imaging surveys are consistent with each other and DESI within $68\%$ confidence. Both BASS+MzLS and DECaLS South yield constraints consistent with $\fnl=0$ within $95\%$, but DECaLS North deviates from zero PNG at more than $2\sigma$. This motivates follow-up studies with the spectroscopic sample of LRGs in DECaLS North.
+\item \textbf{Imaging regions}: We compare how our constraints from fitting the power spectrum of the whole DESI footprint compares to that from the power spectrum of each imaging region individually, namely BASS+MzLS, DECaLS North, and DECaLS South. Figure~\ref{fig:mcmc_dr9reg} shows the $68\%$ and $95\%$ probability contours on $\fnl$ and $b$ from each individual region, compared with that from DESI. The cleaning method here is \textit{nonlinear three maps}, and the covariance matrices are estimated from the $\fnl=0$ mocks. Overall, we find that the constraints from all imaging surveys are consistent with each other and DESI within $68\%$ confidence. Ignoring the over-correction effect, both BASS+MzLS and DECaLS South yield constraints consistent with $\fnl=0$ within $95\%$, but DECaLS North deviates from zero PNG at more than $2\sigma$. This motivates follow-up studies with the spectroscopic sample of LRGs in DECaLS North.
 
-\item \textbf{Stellar density template (\textit{nStar})}: Adding the stellar density template (\textit{nonlinear four maps}) does not change the constraints from BASS+MzLS much, but it shifts the $\fnl$ distributions to lower values in DECaLS North and DECaLS South by $0.5\sigma$ and $\sigma$, respectively, reconciling all constraints with $\fnl=0$. We note that differences are more significant when all nine maps are used as input. This is somewhat expected as cleaning the data with more imaging systematic maps is more prone to the over-correction issue. \mr{We find that the shifts in $\fnl$ from adding $nStar$ are cancelled after accounting for the over correction bias. Comparing \textit{nonlinear four maps} and \textit{nonlinear three maps} in Table \ref{tab:dr9methodcalib} and \ref{tab:dr9method} is indicative that the $\fnl$ shifts after adding $nStar$ are indicative of over-correction due to correlations between the stellar density template and large-scale structure.} 
+\item \textbf{Stellar density template (\textit{nStar})}: Adding the stellar density template (\textit{nonlinear four maps}) does not change the constraints from BASS+MzLS much, but it shifts the $\fnl$ distributions to lower values in DECaLS North and DECaLS South by $0.5\sigma$ and $\sigma$, respectively, reconciling all constraints with $\fnl=0$. We note that differences are more significant when all nine maps are used as input. This is somewhat expected as cleaning the data with more imaging systematic maps is more prone to the over-correction issue. \mr{We find that the shifts in $\fnl$ from adding $nStar$ are reveresed after accounting for the over correction effect. Comparing \textit{nonlinear four maps} and \textit{nonlinear three maps} in Table \ref{tab:dr9methodcalib} and \ref{tab:dr9method} indicates that the $\fnl$ shifts after adding $nStar$ are probably due to over-correction raised by chance correlations between the stellar density map and large-scale structure.} 
 
 \item \textbf{Pixel completeness (\textit{comp. cut})}: We discard pixels with fractional completeness less than half to assess the effect of partially complete pixels on $\fnl$. This cut removes $0.6\%$ of the survey area, and no changes in the $\fnl$ constraints are observed.
 
@@ -127,4 +137,4 @@ DECaLS South (comp. cut)  & Nonlinear Three Maps& $ 29.62$& $ 31.76$& $ 13.00<\f
 \end{itemize}
 
 \subsection{Summary}
-In summary, we find that the nonlinear methods outperform the linear methods in removing the excess clustering signal on large scales. Adding the stellar density map results in significant changes, however when accounted for the mitigation bias, all methods recover the same maximum likelihood estimate. With calibration on the lognormal mocks, the conservative approaches that use a small subset of imaging systematic maps show $\fnl$ detection at more than $2\sigma$ confidence. The most flexible nonlinear method with nine maps returns a bigger associated uncertainty which is consistent with $\fnl=0$. We also run various tests with cuts on the DR9 sample or changing the configuration or details of the analysis. Overall, we find consistent results across sub imaging surveys within DESI. However, our results show that a declination cut at DEC $=-30$ is necessary for DECaLS South to avoid potential calibration issues. Our analysis does not show a statistical demand for including external templates for HI and CALIBZ, using a different covariance matrix, or imposing additional cuts on the DR9 based on imaging and pixel completeness. We also obtain robust results regardless of the largest scale used for constraining $\fnl$.
+In summary, we find that the nonlinear methods outperform the linear methods in removing the excess clustering signal on large scales. Adding the stellar density map results in significant changes, however when accounted for the mitigation bias, all methods recover the same maximum likelihood estimate. With calibration on the lognormal mocks, the neural network three maps and four maps approaches show $\fnl$ detection at more than $2\sigma$ confidence. The most flexible neural network method with nine maps returns a bigger associated uncertainty which is consistent with $\fnl=0$. We also run various tests with cuts on the DR9 sample or changing the configuration or details of the analysis. Overall, we find consistent results across sub imaging surveys within DESI. However, our results show that a declination cut at DEC $=-30$ is necessary for DECaLS South to avoid potential calibration issues. Our analysis does not show a statistical demand for including external templates for HI and CALIBZ, using a different covariance matrix, or imposing additional cuts on the DR9 based on imaging and pixel completeness. We also obtain robust results regardless of the largest scale used for constraining $\fnl$.
